# segmenta

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/segmenta/: cli.py  merger.py
