[project]
name = "segmenta"
version = "0.1.0"
description = "Batch merge and transcode timestamped .ts recordings into organized H.265 archives"
requires-python = ">=3.10"
dependencies = ["typer>=0.15.0"]

[project.scripts]
segmenta = "segmenta.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/segmenta"]
