[project]
name = "segmenta-archiver"
version = "0.1.4"
description = "Batch merge and transcode timestamped source segment files into organized H.265 archives"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "av>=9.0.0",
    "pymediainfo>=4.3",
    "Pillow>=9.2.0",
]

[project.scripts]
segmenta = "segmenta.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/segmenta"]
